--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -29,7 +29,7 @@ linter:
     # ordering
     - directives_ordering
     # formatting
-    - lines_longer_than_80_chars # avoid
+    # - lines_longer_than_80_chars # avoid
     - curly_braces_in_flow_control_structures
     # --- DOCUMENTATION
     # comments
